--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix page</title>
+    <title>Netflix.</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+      href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      href="../../node_modules/bootstrap/dist/css/bootstrap.css"
     />
     <style>
       body {
@@ -65,13 +65,13 @@
       .bottom {
         display: grid;
         grid-template-columns: 3fr 3fr 3fr 3fr;
-        height: 250px;
+        /* height: 250px; */
         padding: 80px;
       }
       footer {
         border-top: 5px solid lightslategray;
         background-color: black;
-        color: rgb(133, 159, 159);
+        color: rgb(133,159,159);
         padding: 80px;
       }
       ul {
@@ -196,15 +196,12 @@
             <li>Privacy</li>
             <li>Speed Test</li>
           <li
-            <div class="input-group">
+            class="input-group">
               <span class="bi bi-globe input-group-text"></span>
               <select class="form-select">
                 <option>English</option>
                 <option>हिन्दी</option>
                 <option>తెలుగు</option>
-                <option>Tamil</option>
-                <option>Malyalam</option>
-                 <option>Marati</option>
               </select>
             </div>
            </li>
